Split the main page into Complex and Docs. Stub for Simple.

--- a/src/main/resources/public/docs.html
+++ b/src/main/resources/public/docs.html
@@ -4,60 +4,8 @@
     <meta charset="UTF-8">
     <meta name="description" content="How to remap Android external keyboard without root">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExKeyMo - Android external keyboard remapping without root</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        textarea {
-            width: 100%;
-
-            white-space: pre;
-            overflow-wrap: normal;
-            overflow-x: scroll;
-        }
-
-        pre {
-            width: 100%;
-        }
-
-        /* Style it because <code> looks ugly in Ghrome */
-        code, kbd, pre {
-            margin: 0 2px;
-            padding: 0px 5px;
-            border: 1px solid #ddd;
-            background-color: #f8f8f8;
-            border-radius: 3px;
-            overflow: scroll;
-        }
-
-        .container {
-            max-width: 960px;
-            margin: auto;
-
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-        }
-
-        .github-link {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
-    </style>
-    <script>
-        function setLayout(layout) {
-            document.getElementById("layout").value = layout;
-        }
-
-        function showSecondLayout(show) {
-            const layout2 = document.getElementById("layout2");
-            layout2.disabled = !show;
-            layout2.hidden = !show;
-        }
-    </script>
+    <title>ExKeyMo > Docs</title>
+    <link rel="stylesheet" href="/common.css">
 </head>
 <body>
 <div class="container">
@@ -66,20 +14,30 @@
             <path fill="#000" fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
         </svg>
     </a>
-    <h1>ExKeyMo</h1>
-    <h2>Android external keyboard remapping without root</h2>
+
+    <nav>
+        <a href="/simple">Simple</a>
+        <a href="/complex">Complex</a>
+        <b>Docs</b>
+    </nav>
+    <h1>ExKeyMo > Docs</h1>
+
+    <h2>Android external keyboard layout customization without root</h2>
     <p>
-        Since Android 4.1 an app can provide additional keyboard layouts (<a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map files</a>).
+        Since Android 4.1 an app can provide additional keyboard layouts via <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map</a> files.
         Since then, it's possible to customize a keyboard layout without root access by installing an app that contains requred layout.
         ExKeyMo helps you to build such app even if you don't know anything about Android development.
     </p>
 
     <h2>How to</h2>
     <ol>
-        <li>Customize Key Character Map file content in the form below.
-        <li>Click <kbd>Download</kbd>. ExKeyMo will build the app for you.</li>
         <li>
-            Download the app and install it.
+            Create an app with your custom layout built.
+            Use <a href="/simple">Simple</a> UI for key remapping.
+            Use <a href="/complex">Complex</a> UI to provide your own Key Character Map files.
+        </li>
+        <li>
+            Install the app.
             The app is self-signed so Android will warn you about untrusted source or something like this.
             Note: if you install the app and get an error, try to uninstall the previous version first, if you have any.
         </li>
@@ -89,28 +47,9 @@
         </li>
     </ol>
 
-    <p>
-        <span>Examples:</span>
-        <button onclick="setLayout('type OVERLAY')">Default</button>
-        <button onclick="setLayout('type OVERLAY\n\nmap key 58 CTRL_LEFT')">Caps Lock as Left Ctrl</button>
-        <button onclick="setLayout('type OVERLAY\n\nmap key 58 CTRL_LEFT\nmap key 29 CAPS_LOCK')">Swap Caps Lock and Left Ctrl</button>
-        <button onclick="setLayout('type OVERLAY\n\nmap key 58 ESCAPE')">Caps Lock as Esc</button>
-        <button onclick="setLayout('type OVERLAY\n\nmap key 58 ESCAPE\nmap key 1 CAPS_LOCK')">Swap Caps Lock and Esc
-        </button>
-    </p>
-
-    <form id="form" action="/" method="post"></form>
-    <textarea id="layout" name="layout" rows="20" required form="form" autocomplete="off">type OVERLAY</textarea>
-    <span>
-        <input type="checkbox" id="add-second-layout" onchange="showSecondLayout(this.checked)"/>
-        <label for="add-second-layout">Add Second Layout</label><br/>
-    </span>
-    <textarea id="layout2" name="layout2" rows="20" required disabled form="form" autocomplete="off">type OVERLAY</textarea>
-    <input type="submit" value="Download" form="form">
-
     <h2>Layout customization</h2>
     <p>
-        The keyboard layout is customized using <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map file</a> syntax.
+        The keyboard layout is customized via <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map</a> files.
         To remap a physical key use <code>map key KEY_CODE ANDROID_KEY</code> syntax
         where <code>KEY_CODE</code> is the code that produced by the physical key
         and <code>ANDROID_KEY</code> is an Android key such as <code>ENTER</code>,
@@ -149,14 +88,11 @@ map key 1 CAPS_LOCK
     <h2>Second Layout</h2>
     <p>
         A second layout is useful if you use multiple languages.
-        Select <kbd>Add Second Layout</kbd> checkbox to add the second layout.
-        Specify it in the form below the checkbox.
     </p>
     <p>
         For example you still want to swap <kbd>Caps Lock</kbd> key and <kbd>Esc</kbd> key,
         but you need to do it for a language other than English.
         Find the default KCM-file for your language <a target="_blank" href="https://android.googlesource.com/platform/frameworks/base/+/master/packages/InputDevices/res/raw">here</a>.
-        Copy the content of that file to the second language field.
         Add corresponding mappings. The final result will be:
     </p>
     <pre>
@@ -187,8 +123,5 @@ map key 1 CAPS_LOCK
     </p>
 </div>
 
-<script>
-    showSecondLayout(document.getElementById("add-second-layout").checked);
-</script>
 </body>
 </html>
