--- a/src/main/resources/public/complex.html
+++ b/src/main/resources/public/complex.html
@@ -25,6 +25,7 @@
     <p>
         Enter Key Character Map file content in the form below.
         See the <a href="/docs">docs</a> or <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">official documentation</a>.
+        If you need to just remap some keys take a look at <a href="/simple">simple</a> customization.</p>
     </p>
 
     <form id="form" action="/complex" method="post"></form>
