Rearrange nav and header

--- a/src/main/resources/public/complex.html
+++ b/src/main/resources/public/complex.html
@@ -15,12 +15,12 @@
         </svg>
     </a>
 
+    <h1>Android external keyboard layout customization without root</h1>
     <nav>
         <a href="/simple">Simple</a>
         <b>Complex</b>
         <a href="/docs">Docs</a>
     </nav>
-    <h1>ExKeyMo > Complex</h1>
 
     <p>
         Enter Key Character Map file content in the form below.
