--- a/src/main/resources/public/docs.html
+++ b/src/main/resources/public/docs.html
@@ -15,14 +15,13 @@
         </svg>
     </a>
 
+    <h1>Android external keyboard layout customization without root</h1>
     <nav>
         <a href="/simple">Simple</a>
         <a href="/complex">Complex</a>
         <b>Docs</b>
     </nav>
-    <h1>ExKeyMo > Docs</h1>
 
-    <h2>Android external keyboard layout customization without root</h2>
     <p>
         Since Android 4.1 an app can provide additional keyboard layouts via <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map</a> files.
         Since then, it's possible to customize a keyboard layout without root access by installing an app that contains requred layout.
@@ -33,8 +32,8 @@
     <ol>
         <li>
             Create an app with your custom layout built.
-            Use <a href="/simple">Simple</a> UI for key remapping.
-            Use <a href="/complex">Complex</a> UI to provide your own Key Character Map files.
+            Use <a href="/simple">simple</a> UI for key remapping.
+            Use <a href="/complex">complex</a> UI to provide your own Key Character Map files.
         </li>
         <li>
             Install the app.
