--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -20,12 +20,12 @@
         </svg>
     </a>
 
+    <h1>Android external keyboard layout customization without root</h1>
     <nav>
         <b>Simple</b>
         <a href="/complex">Complex</a>
         <a href="/docs">Docs</a>
     </nav>
-    <h1>ExKeyMo > Simple</h1>
 
     <p>
         Specify mappings below.
@@ -34,7 +34,7 @@
 
     <form id="form" action="/simple" method="post">
     </form>
-    <button id="add">Add</button>
+    <button id="add">Add key map</button>
     <input type="submit" value="Download" form="form">
 
     <template id="generic-kl-options">
