Android external keyboard remapping without root

--- a/src/main/resources/public/docs.html
+++ b/src/main/resources/public/docs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="How to remap Android external keyboard without root">
+    <meta name="description" content="Android external keyboard remapping without root">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ExKeyMo > Docs</title>
     <link rel="stylesheet" href="/common.css">
@@ -15,7 +15,7 @@
         </svg>
     </a>
 
-    <h1>Android external keyboard layout customization without root</h1>
+    <h1>Android external keyboard remapping without root</h1>
     <nav>
         <a href="/simple">Simple</a>
         <a href="/complex">Complex</a>
