simple form layout

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -34,10 +34,10 @@
 
     <form id="form" action="/simple" method="post">
         <label>From/to:</label>
-        <button id="add" type="button">Add key map</button>
+        <button id="add" type="button" style="display: block;">Add key map</button>
         <p>
             <label>Base layout:</label>
-            <select name="layout">
+            <select name="layout" style="display: block;">
                 <option value="" selected>Default</option>
                 <option value="keyboard_layout_arabic.kcm">Arabic</option>
                 <option value="keyboard_layout_azerbaijani.kcm">Azerbaijan</option>
