--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -36,8 +36,8 @@
         <table border="0" cellpadding="0" cellspacing="0">
             <thead>
                 <tr>
-                    <th><label>From key</label></th>
-                    <th><label>To key</label></th>
+                    <th style="text-align: left;">From key</th>
+                    <th style="text-align: left;">To key</th>
                 </tr>
                 </thead>
             <tbody id="tbody"></tbody>
