--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -7,8 +7,16 @@
     <title>ExKeyMo > Simple</title>
     <link rel="stylesheet" href="/common.css">
     <style>
-        select {
-            margin-right: 8px;
+        th {
+            text-align: left;
+        }
+
+        td select {
+            width: 100%;
+        }
+
+        td:not(:last-child) {
+            padding-right: 8px;
         }
     </style>
 </head>
@@ -36,8 +44,8 @@
         <table border="0" cellpadding="0" cellspacing="0">
             <thead>
                 <tr>
-                    <th style="text-align: left;">From key</th>
-                    <th style="text-align: left;">To key</th>
+                    <th>From key</th>
+                    <th>To key</th>
                 </tr>
                 </thead>
             <tbody id="tbody"></tbody>
