Add "Keys defined by HID usages"

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -496,12 +496,12 @@
         <!--Linux KEY_ASSISTANT-->
         <option value="583">ASSIST</option>
         <!--Keys defined by HID usages-->
-        <!--<option value="usage 0x0c0067">WINDOW</option>-->
-        <!--<option value="usage 0x0c006F">BRIGHTNESS_UP</option>-->
-        <!--<option value="usage 0x0c0070">BRIGHTNESS_DOWN</option>-->
-        <!--<option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>-->
-        <!--<option value="usage 0x0c019C">PROFILE_SWITCH</option>-->
-        <!--<option value="usage 0x0c01A2">ALL_APPS</option>-->
+        <option value="usage 0x0c0067">WINDOW</option>
+        <option value="usage 0x0c006F">BRIGHTNESS_UP</option>
+        <option value="usage 0x0c0070">BRIGHTNESS_DOWN</option>
+        <option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>
+        <option value="usage 0x0c019C">PROFILE_SWITCH</option>
+        <option value="usage 0x0c01A2">ALL_APPS</option>
     </template>
     <template id="android-keys">
         <option value="ESCAPE">ESCAPE</option>
@@ -887,12 +887,12 @@
         <!--Linux KEY_ASSISTANT-->
         <option value="ASSIST">ASSIST</option>
         <!--Keys defined by HID usages-->
-        <!--<option value="usage 0x0c0067">WINDOW</option>-->
-        <!--<option value="usage 0x0c006F">BRIGHTNESS_UP</option>-->
-        <!--<option value="usage 0x0c0070">BRIGHTNESS_DOWN</option>-->
-        <!--<option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>-->
-        <!--<option value="usage 0x0c019C">PROFILE_SWITCH</option>-->
-        <!--<option value="usage 0x0c01A2">ALL_APPS</option>-->
+        <option value="WINDOW">WINDOW</option>
+        <option value="BRIGHTNESS_UP">BRIGHTNESS_UP</option>
+        <option value="BRIGHTNESS_DOWN">BRIGHTNESS_DOWN</option>
+        <option value="MEDIA_AUDIO_TRACK">MEDIA_AUDIO_TRACK</option>
+        <option value="PROFILE_SWITCH">PROFILE_SWITCH</option>
+        <option value="ALL_APPS">ALL_APPS</option>
     </template>
 
     <script>
